# Divergence-Meter-Project-v2

./: .gitignore  README.md
Graphics/: BY-SA.kicad_mod  GitHub-Link-QR.kicad_mod
Hardware/Main/: BOM.html  Battery.sch  Divergence Meter Project v2.ioc  Level Shifter.sch  Main-cache.lib  Main-rescue.lib  Main.ioc  Main.kicad_pcb  Main.pro  Main.sch  Power.sch  sym-lib-table
Hardware/Main/Gerber/: Main-B_Cu.gbr  Main-B_Mask.gbr  Main-B_Paste.gbr  Main-B_SilkS.gbr  Main-Edge_Cuts.gbr  Main-F_Cu.gbr  Main-F_Mask.gbr  Main-F_Paste.gbr  Main-F_SilkS.gbr  Main-NPTH.drl  Main-PTH.drl  Main-job.gbrjob
Hardware/Nixie/: Nixie-cache.lib  Nixie-rescue.lib  Nixie.kicad_pcb  Nixie.pro  Nixie.sch  fp-lib-table  sym-lib-table
Hardware/Nixie/Gerber/: Nixie-B_Cu.gbr  Nixie-B_Mask.gbr  Nixie-B_Paste.gbr  Nixie-B_SilkS.gbr  Nixie-Edge_Cuts.gbr  Nixie-F_Cu.gbr  Nixie-F_Mask.gbr  Nixie-F_Paste.gbr  Nixie-F_SilkS.gbr  Nixie-PTH.drl  Nixie-job.gbrjob
Software/: CMakeLists.txt  Cargo.toml  memory.x  openocd.cfg
Software/src/: hardware.rs  main.rs
Software/src/drivers/: battery_charger.rs  battery_gauge.rs  button.rs  display.rs  mod.rs  shift_register.rs
Software/src/tasks/: buttons.rs  charger.rs  main.rs  mod.rs  vbus_detect.rs
Software/src/utils/: bcd.rs  delay.rs  mod.rs  rng.rs  units.rs
